Added arXiv link

--- a/docs/assets/nglod.bib
+++ b/docs/assets/nglod.bib
@@ -10,5 +10,5 @@
               Morgan McGuire and 
               Sanja Fidler},
     year = {2021},
-    journal = {arXiv preprint arXiv:2101.XXXXX}
+    journal = {arXiv preprint arXiv:2101.10994}
 }
